# Citrus

./: .gitignore  Cargo.toml  README.md  compile_shaders.bat  scrapbook.txt
src/: camera.rs  config.rs  controls.rs  lib.rs  main.rs  profiler.rs  world.rs
src/graphics/: buffer.rs  camera.rs  geometry.rs  graphics_object.rs  graphics_state.rs  meshing.rs  object.rs  pipeline.rs  scanner.rs  shader.rs  state.rs  texture.rs  triangle.rs  vertex.rs
src/random/: mt.rs
src/shaders/: hud.frag  hud.vert  triangle.vert
src/ui/: font.rs  text.rs
src/ui/io/: command_line.rs
src/world/: block.rs  icoords.rs  noise.rs  object.rs  ray.rs  segment.rs  size.rs
