[package]
name = "citrus"
version = "0.1.0"
authors = ["Aurel Feer <aurel.feer@gmail.com>"]
edition = "2021"

[dependencies]
ash = {version = "0.37.1", default-features = false, features = ["linked", "debug"]}
ash-window = "0.12.0"
glfw = {version = "0.49.1", features = ["vulkan"]}
raw-window-handle = "0.5.0"
glam = "0.22.0"
noise = "0.9.0"
rusttype = "0.9.3"
image = "0.24.5"
rand = "0.8.5"
