[package]
name = "citrus"
version = "0.1.0"
authors = ["Aurel Feer <aurel.feer@gmail.com>"]
edition = "2021"

[dependencies]
ash = {version = "0.38.0", default-features = false, features = ["linked", "debug"]}
ash-window = "0.13.0"
glfw = {version = "0.55.0", features = ["vulkan"]}
raw-window-handle = "0.6.0"
glam = "0.27.0"
rusttype = "0.9.3"
image = "0.25.1"
rand = "0.8.5"
